added separator and default rule

--- a/debian/rules
+++ b/debian/rules
@@ -72,4 +72,5 @@ override_dh_installman:
 	dh_installman --language=C
 
 override_dh_installsystemd:
-    dh_installsystemd --restart-after-upgrade -povn-host --name=ovn-controller
+	dh_installsystemd --restart-after-upgrade -povn-host --name=ovn-controller
+	dh_installsystemd --restart-after-upgrade
