added comment to provide context to the new ovn host service

--- a/debian/ovn-host.service
+++ b/debian/ovn-host.service
@@ -1,3 +1,4 @@
+# this service replaces ovn-controller service from the upstream ubuntu build in the custom pf9 OVN build
 [Unit]
 Description=OVN controller daemon
 After=network.target openvswitch-switch.service
