Revert "PCD-3835, PCD-3843: Changes to ovn for hostside package and du container build"

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,31 +1,10 @@
-FROM ubuntu:22.04
+FROM docker.io/openstackhelm/ovn:ubuntu_jammy
 
-ENV DEBIAN_FRONTEND=noninteractive
-SHELL ["/bin/bash", "-euo", "pipefail", "-c"]
+# Copy your patched binary to /usr/bin
+COPY northd/ovn-northd /usr/bin/ovn-northd
+COPY controller/ovn-controller /usr/bin/ovn-controller
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    ca-certificates \
-    iproute2 iptables \
-    libssl3 libunbound8 libunwind8 libjson-c5 libevent-2.1-7 libsystemd0 \
-    procps curl \
-  && rm -rf /var/lib/apt/lists/*
+# Ensure correct permissions
+RUN chmod +x /usr/bin/ovn-northd
+RUN chmod +x /usr/bin/ovn-controller
 
-# Copy built packages from the build context
-COPY pkgs/u22/*.deb /tmp/pkgs/
-
-RUN apt-get update \
-&& dpkg -i /tmp/pkgs/*.deb || true \
-&& apt-get -f install -y \
-&& dpkg -i /tmp/pkgs/*.deb \
-&& rm -rf /var/lib/apt/lists/* /tmp/pkgs
-
-RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" \
-  && install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
- 
-COPY  ovn-kube-util /usr/bin/
-
-
-RUN install -d -m 0755 /var/lib/ovn /var/log/ovn /etc/ovn
-
-WORKDIR /root
-ENTRYPOINT /root/ovnkube.sh
